--- a/internals/aws-stack/package.json
+++ b/internals/aws-stack/package.json
@@ -11,21 +11,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/node": "10.17.27",
+    "@types/node": "~17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "aws-cdk": "2.10.0",
+    "aws-cdk": "~2.13.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-cdk": "^1.7.0",
     "eslint-plugin-import": "^2.25.4",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "ts-node": "^10.5.0",
+    "typescript": "~4.5.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.10.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "aws-cdk-lib": "~2.13.0",
+    "constructs": "^10.0.67",
+    "source-map-support": "^0.5.21"
   }
 }
