--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,11 @@
     "branches": ["master"]
   },
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", {
+      "releaseRules": [
+        { "type": "security", "release": "patch" }
+      ]
+    }],
     "@semantic-release/release-notes-generator",
     "@semantic-release/github"
   ]
